Added: -actuator to project and test annotation @EnableAsync -@RequestMapping annotation in controllers -MvcConfiguration for LoggerFilter and LoggerInterceptor (to learn how it is work)

--- a/com.pgs.todo/src/main/resources/application-local.yml
+++ b/com.pgs.todo/src/main/resources/application-local.yml
@@ -9,4 +9,8 @@
       jpa:
         hibernate:
           ddl-auto: validate
-      task.template.allowMultipleTasks: false
+    management:
+      endpoints:
+        web:
+          exposure:
+            include: '*'
