--- a/com.pgs.todo/src/main/resources/application.properties
+++ b/com.pgs.todo/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql = false
 server.error.include-message = always
 server.error.include-binding-errors = always
 spring.flyway.baseline-on-migrate = true
+task.template.allowMultipleTasks = false
+management.endpoints.web.base-path = /status
