--- a/com.pgs.todo/src/main/resources/application.properties
+++ b/com.pgs.todo/src/main/resources/application.properties
@@ -11,3 +11,4 @@ server.error.include-binding-errors = always
 spring.flyway.baseline-on-migrate = true
 task.template.allowMultipleTasks = false
 management.endpoints.web.base-path = /status
+management.metrics.enable.http = false
