Added: -security with Keycloak -admin and user role in Keycloak -configuration to handling connection with Keycloak -controller to logout

--- a/com.pgs.todo/src/main/resources/application-local.yml
+++ b/com.pgs.todo/src/main/resources/application-local.yml
@@ -14,3 +14,9 @@
         web:
           exposure:
             include: '*'
+
+    keycloak:
+      auth-server-url: 'http://localhost:8180/auth'
+      realm: 'ToDoApplication'
+      resource: 'todo-spring-client'
+      public-client: true
