--- a/com.pgs.todo/pom.xml
+++ b/com.pgs.todo/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.pgs</groupId>
 	<artifactId>todo-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ToDoApp</name>
+	<name>ToDoApplication</name>
 	<description>Todo App Udemy course</description>
 	<properties>
 		<java.version>17</java.version>
