--- a/com.pgs.todo/src/main/resources/application-local.yml
+++ b/com.pgs.todo/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
     spring:
       h2.console:
-        enable: true
+        enabled: true
         path: '/console'
       main:
         banner-mode: off
