--- a/com.pgs.todo/src/main/resources/application-prod.yml
+++ b/com.pgs.todo/src/main/resources/application-prod.yml
@@ -1,5 +1,5 @@
     spring:
       h2.console:
-        enable: false
+        enabled: false
       datasource:
         url: 'jdbc:h2:mem:todo-db'
